# Todo-App

./: pyproject.toml
migrations/: env.py
migrations/versions/: 39ff42f4714e_add_hashed_password_field_to_users_table.py  a3f029e365a0_create_users_and_tasks_table.py  bb5be2d87a0f_rename_task_fields_and_improve_models.py
src/: main.py
src/api/: auth.py  task.py  user.py
src/core/: config.py  security.py
src/db/: database.py
src/dependencies/: auth.py  database.py
src/models/: task.py  tasks.py  user.py  users.py
src/schemas/: task.py  user.py
src/services/: auth.py  task.py  user.py
